--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+EMAIL_USER=mradulgandhi18@gmail.com
+EMAIL_PASS=vtzdlfptwiwxywsp
 PORT=5000
 NODE_ENV=development
 MONGO_URI=mongodb://localhost:27017/panch
